清理无用文件

--- a/src/test/test_browser.html
+++ b/src/test/test_browser.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<title>tooDiff</title>
-	<link rel="stylesheet" href="style.css" />
+	<link rel="stylesheet" href="../style.css" />
 </head>
 <body>
 	
@@ -11,7 +11,7 @@
 	<ol id="file2" class="file"></ol>
 	<div id="debug"></div>
 
-	<script src="./js/zepto-1.0.min.js"></script>
-	<script src="./js/editprogress.js"></script>
+	<script src="../js/zepto-1.0.min.js"></script>
+	<script src="../js/editprogress.js"></script>
 </body>
 </html>
