修复空格引起的比对问题 修复同步滚动的算法不正确的问题 修正标题 添加文件名

--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,13 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>tooDiff</title>
+	<title>TooDiff</title>
 	<link rel="stylesheet" href="style.css" />
 </head>
 <body>
 	<!-- <header>TooDiff alpha By TooBug</header> -->
+	<div id="fileInfo1" class="fileInfo">请拖入文件</div>
+	<div id="fileInfo2" class="fileInfo">请拖入文件</div>
 	<ol id="file1" class="file"></ol>
 	<ol id="file2" class="file"></ol>
 	<div id="debug"></div>
